--- a/public/index.html
+++ b/public/index.html
@@ -21,33 +21,33 @@
       flex-direction: column;
       justify-content: space-between;
       height: 100vh;
-      padding: 12px;
+      padding: 8px;
     }
 
     .grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 10px;
+      gap: 6px;
       flex: 1;
     }
 
     .block {
-      flex: 1 1 47%;
-      max-width: 47%;
-      height: 38vh;
+      flex: 1 1 48%;
+      max-width: 48%;
+      height: 36vh;
       min-height: 120px;
       border-radius: 20px;
       color: white;
       font-weight: 600;
-      font-size: 1.2rem;
+      font-size: 1.15rem;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
       cursor: pointer;
       transition: all 0.3s ease;
-      box-shadow: 0 5px 12px rgba(0,0,0,0.07);
+      box-shadow: 0 5px 12px rgba(0, 0, 0, 0.07);
       position: relative;
     }
 
@@ -55,23 +55,23 @@
       .block {
         flex: 1 1 22%;
         max-width: 22%;
-        height: 58vh;
+        height: 60vh;
       }
     }
 
     .block:hover {
       transform: scale(1.015);
-      box-shadow: 0 10px 18px rgba(0,0,0,0.08);
+      box-shadow: 0 10px 18px rgba(0, 0, 0, 0.08);
     }
 
     .shock {
-      background: linear-gradient(to right, #7F00FF, #E100FF);
+      background: linear-gradient(to right, #8e2de2, #4a00e0);
       color: white;
       font-weight: bold;
       border: none;
       border-radius: 32px;
       padding: 14px 32px;
-      margin: 16px auto 0;
+      margin: 14px auto 0;
       display: block;
       font-size: 0.95rem;
       box-shadow: 0 4px 10px rgba(127, 0, 255, 0.3);
@@ -88,7 +88,7 @@
       justify-content: center;
       align-items: center;
       gap: 8px;
-      margin-top: 8px;
+      margin-top: 6px;
     }
 
     .imagotipo {
@@ -105,7 +105,7 @@
       position: absolute;
       inset: 0;
       padding: 14px;
-      background: rgba(255,255,255,0.9);
+      background: rgba(255,255,255,0.93);
       color: #222;
       font-size: 0.95rem;
       font-weight: 500;
@@ -127,6 +127,16 @@
       pointer-events: auto;
     }
 
+    .label {
+      z-index: 1;
+      position: relative;
+      transition: opacity 0.2s ease;
+    }
+
+    .block.show .label {
+      opacity: 0;
+    }
+
     .block a {
       color: white;
       text-decoration: none;
@@ -136,17 +146,12 @@
       justify-content: center;
       align-items: center;
     }
-
-    .label {
-      z-index: 1;
-      position: relative;
-    }
   </style>
 </head>
 <body>
   <div class="main">
     <div class="grid">
-      <div class="block" id="detenteBlock" style="background: linear-gradient(135deg, #ef4d5a, #8e44ad);">
+      <div class="block" id="detenteBlock" style="background: linear-gradient(135deg, #f43b47, #453a94);">
         <div class="accionables" id="accionables">
           ✊ Abraza la incomodidad<br>
           🧠 Domina tu diálogo interno<br>
@@ -155,15 +160,15 @@
         <span class="label">Detente</span>
       </div>
 
-      <div class="block" id="leeBlock" style="background: linear-gradient(135deg, #2193b0, #6dd5ed);">
+      <div class="block" id="leeBlock" style="background: linear-gradient(135deg, #3CA55C, #B5AC49);">
         <span class="label">Lee</span>
       </div>
 
-      <div class="block" style="background: linear-gradient(135deg, #f7971e, #ffd200);">
+      <div class="block" style="background: linear-gradient(135deg, #ff6a00, #ee0979);">
         <a href="https://www.ted.com/talks/ken_robinson_do_schools_kill_creativity" target="_blank" class="label">?</a>
       </div>
 
-      <div class="block" style="background: linear-gradient(135deg, #00c9ff, #92fe9d);">
+      <div class="block" style="background: linear-gradient(135deg, #36D1DC, #5B86E5);">
         <span class="label">Conecta</span>
       </div>
     </div>
@@ -187,10 +192,10 @@
     let leeState = false;
     document.getElementById('leeBlock').addEventListener('click', function () {
       if (!leeState) {
-        this.style.background = 'linear-gradient(135deg, #ff9a9e, #fad0c4)';
+        this.style.background = 'linear-gradient(135deg, #ffe000, #799f0c)';
         leeState = true;
       } else {
-        this.style.background = 'linear-gradient(135deg, #2193b0, #6dd5ed)';
+        this.style.background = 'linear-gradient(135deg, #3CA55C, #B5AC49)';
         leeState = false;
       }
     });
