--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>Triggui – Ritual Perfecto</title>
+  <title>Triggui – Ritual Supremo</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -11,7 +11,7 @@
       width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
-      background: white;
+      background: #fdfdfd;
       overflow: hidden;
     }
     body.dark { background: #000; }
@@ -50,11 +50,12 @@
       background-size: cover;
       background-position: center;
       cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      animation: pulse 6s infinite;
     }
     .block:hover {
-      transform: scale(1.04);
-      box-shadow: 0 8px 24px rgba(0,0,0,0.2);
+      transform: scale(1.03);
+      box-shadow: 0 8px 28px rgba(0,0,0,0.25);
     }
     .block-content {
       position: absolute;
@@ -65,28 +66,36 @@
       padding: 14px;
       text-align: center;
     }
-    .label { z-index: 1; }
+    .label {
+      z-index: 1;
+      font-size: 1.4rem;
+      animation: fadeIn 2s ease forwards;
+    }
     .accionable {
-      font-size: 1rem;
+      font-size: 1.1rem;
       font-weight: 600;
       padding: 16px;
       border-radius: 20px;
       opacity: 0;
       animation: aparecer 0.6s forwards;
       box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(6px);
     }
-    .bg1 { background: linear-gradient(135deg, #ff9a9e, #fad0c4); color: #000; }
-    .bg2 { background: linear-gradient(135deg, #a1c4fd, #c2e9fb); color: #000; }
-    .bg3 { background: linear-gradient(135deg, #fbc2eb, #a6c1ee); color: #000; }
-    .bg4 { background: linear-gradient(135deg, #ffecd2, #fcb69f); color: #000; }
+    .bg1 { background: linear-gradient(135deg, #ff6a00, #ee0979); color: #fff; }
+    .bg2 { background: linear-gradient(135deg, #36d1dc, #5b86e5); color: #fff; }
+    .bg3 { background: linear-gradient(135deg, #ff9a9e, #fad0c4); color: #000; }
+    .bg4 { background: linear-gradient(135deg, #00c6ff, #0072ff); color: #fff; }
 
     .portada-img {
       width: 100%;
       height: 100%;
       object-fit: contain;
-      animation: flotar 8s ease-in-out infinite;
       border-radius: 20px;
+      box-shadow: 0 10px 50px rgba(0,0,0,0.5);
+      animation: flotar 6s ease-in-out infinite;
     }
+
     @keyframes flotar {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
@@ -95,6 +104,16 @@
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.02); }
+      100% { transform: scale(1); }
+    }
+
     .footer {
       display: flex;
       flex-direction: column;
@@ -103,44 +122,52 @@
       min-height: 80px;
       justify-content: center;
     }
+
     .shock {
-      background: linear-gradient(135deg, #ff6a00, #ffb347);
+      background: linear-gradient(135deg, #fc466b, #3f5efb);
       color: white;
       font-weight: bold;
       border: none;
       border-radius: 30px;
-      padding: 10px 22px;
+      padding: 12px 26px;
       font-size: 1rem;
       cursor: pointer;
-      box-shadow: 0 4px 16px rgba(255, 140, 0, 0.4);
-      animation: fadeIn 1s ease forwards;
+      box-shadow: 0 6px 18px rgba(255,80,80,0.4);
+      animation: fadeIn 1.5s ease forwards;
       margin-bottom: 6px;
     }
+
     .final-message {
       color: white;
-      font-size: 1rem;
+      font-size: 1.2rem;
       text-align: center;
-      opacity: 0.88;
+      opacity: 0.9;
+      margin-top: 10px;
     }
+
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
-      font-size: 1.5rem;
-      padding: 8px 14px;
+      font-size: 1.7rem;
+      padding: 10px 16px;
       border-radius: 14px;
       cursor: pointer;
       color: white;
-      backdrop-filter: blur(5px);
+      backdrop-filter: blur(6px);
       margin-top: 6px;
     }
+
     #reiniciarBtn:hover {
       background: rgba(255,255,255,0.2);
     }
+
     .trigguiletras {
       height: 24px;
       opacity: 0.9;
+      margin-top: 8px;
       transition: opacity 0.4s ease;
     }
+
     .hidden { display: none !important; }
   </style>
 </head>
@@ -149,8 +176,8 @@
   <div class="main">
     <div class="grid" id="gridContainer"></div>
     <div class="footer">
-      <button class="shock hidden" id="shockBtn">📚👊 Chócalas</button>
-      <div class="final-message hidden" id="mensajeFinal">📖 Abre un libro y encuentra una verdad.</div>
+      <button class="shock hidden" id="shockBtn">📚👊 ¡Chócalas!</button>
+      <div class="final-message hidden" id="mensajeFinal">📖 ¿Listo para abrir un libro físico?</div>
       <button id="reiniciarBtn" class="hidden">↻</button>
       <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui" />
     </div>
@@ -159,44 +186,26 @@
 <script>
 const el = id => document.getElementById(id);
 const bloques = ["detente", "lee", "pregunta", "conecta"];
-const colores = [
-  "#ff9a9e",
-  "#a1c4fd",
-  "#fbc2eb",
-  "#ffecd2"
+const frases = [
+  "🚀 Da un micro paso hoy.",
+  "🧠 Conquista tu mente primero.",
+  "🎯 Encuentra tu siguiente misión.",
+  "💬 Conecta una idea con una acción."
 ];
-
-const libros = [
-  {
-    portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg',
-    frases: [
-      "🧠 El poder nace del autoconocimiento.",
-      "👁️ Lo emocional es lo más racional.",
-      "🎭 Entiende tus sombras y hazlas aliadas.",
-      "🧬 Todo comportamiento tiene raíz invisible."
-    ]
-  }
-];
-
-let libroActual, bloquePortada, revelado = false;
+const portadaURL = "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg";
+let bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
+let revelado = false;
 
 function iniciarJuego() {
   const grid = el('gridContainer');
   const logo = el('logoTriggui');
   grid.innerHTML = '';
-  libroActual = libros[0];
-  bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
-  revelado = false;
   logo.classList.remove("hidden");
-
-  let frases = [...libroActual.frases];
-  while (frases.length < 4) frases.push(...libroActual.frases);
 
   bloques.forEach((nombre, i) => {
     const div = document.createElement('div');
     div.className = 'block';
     div.id = nombre;
-    div.style.background = colores[i];
     const bgClass = `bg${i+1}`;
     div.innerHTML = `
       <div class="block-content label">${nombre.toUpperCase()}</div>
@@ -225,10 +234,10 @@ function revelarTodo() {
     block.querySelector(".label").classList.add("hidden");
 
     if (nombre === bloquePortada) {
-      block.innerHTML = `<img src="${libroActual.portada}" class="portada-img" alt="Portada del libro">`;
+      block.innerHTML = `<img src="${portadaURL}" class="portada-img" alt="Portada del libro">`;
       block.style.background = "none";
       block.style.padding = "0";
-      block.style.borderRadius = "20px"; // 🔥 conservamos esquinas redondeadas
+      block.style.borderRadius = "20px"; 
     } else {
       text.classList.remove("hidden");
     }
