--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>Triggui – Ritual Supremo</title>
+  <title>Triggui – Heurística Suprema</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -11,11 +11,10 @@
       width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
-      background: #fdfdfd;
+      background: #fafafa;
       overflow: hidden;
     }
     body.dark { background: #000; }
-
     .main {
       height: 100dvh;
       display: flex;
@@ -43,19 +42,19 @@
       text-align: center;
       border-radius: 20px;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       color: white;
       position: relative;
       overflow: hidden;
       background-size: cover;
       background-position: center;
       cursor: pointer;
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
-      animation: pulse 6s infinite;
+      transition: transform 0.5s ease, box-shadow 0.5s ease;
+      animation: pulse 8s infinite;
     }
     .block:hover {
-      transform: scale(1.03);
-      box-shadow: 0 8px 28px rgba(0,0,0,0.25);
+      transform: scale(1.05);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.25);
     }
     .block-content {
       position: absolute;
@@ -66,54 +65,43 @@
       padding: 14px;
       text-align: center;
     }
-    .label {
-      z-index: 1;
-      font-size: 1.4rem;
-      animation: fadeIn 2s ease forwards;
-    }
+    .label { z-index: 1; }
     .accionable {
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       font-weight: 600;
       padding: 16px;
       border-radius: 20px;
       opacity: 0;
-      animation: aparecer 0.6s forwards;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-      background: rgba(255,255,255,0.1);
-      backdrop-filter: blur(6px);
+      animation: aparecer 0.8s forwards;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+      background: rgba(255,255,255,0.15);
+      backdrop-filter: blur(8px);
     }
-    .bg1 { background: linear-gradient(135deg, #ff6a00, #ee0979); color: #fff; }
-    .bg2 { background: linear-gradient(135deg, #36d1dc, #5b86e5); color: #fff; }
-    .bg3 { background: linear-gradient(135deg, #ff9a9e, #fad0c4); color: #000; }
-    .bg4 { background: linear-gradient(135deg, #00c6ff, #0072ff); color: #fff; }
-
+    .bg1 { background: linear-gradient(135deg, #ff416c, #ff4b2b); color: #ffffff; }
+    .bg2 { background: linear-gradient(135deg, #00c3ff, #ffff1c); color: #000000; }
+    .bg3 { background: linear-gradient(135deg, #fc466b, #3f5efb); color: #ffffff; }
+    .bg4 { background: linear-gradient(135deg, #8e2de2, #4a00e0); color: #ffffff; }
     .portada-img {
       width: 100%;
       height: 100%;
       object-fit: contain;
       border-radius: 20px;
-      box-shadow: 0 10px 50px rgba(0,0,0,0.5);
+      box-shadow: 0 10px 50px rgba(0,0,0,0.6);
       animation: flotar 6s ease-in-out infinite;
     }
-
     @keyframes flotar {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
     }
     @keyframes aparecer {
-      from { opacity: 0; transform: scale(0.95); }
+      from { opacity: 0; transform: scale(0.9); }
       to { opacity: 1; transform: scale(1); }
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
     }
     @keyframes pulse {
       0% { transform: scale(1); }
       50% { transform: scale(1.02); }
       100% { transform: scale(1); }
     }
-
     .footer {
       display: flex;
       flex-direction: column;
@@ -122,52 +110,46 @@
       min-height: 80px;
       justify-content: center;
     }
-
     .shock {
-      background: linear-gradient(135deg, #fc466b, #3f5efb);
+      background: linear-gradient(135deg, #ff6a00, #ffb347);
       color: white;
       font-weight: bold;
       border: none;
       border-radius: 30px;
-      padding: 12px 26px;
+      padding: 12px 28px;
       font-size: 1rem;
       cursor: pointer;
-      box-shadow: 0 6px 18px rgba(255,80,80,0.4);
+      box-shadow: 0 6px 16px rgba(255, 140, 0, 0.5);
       animation: fadeIn 1.5s ease forwards;
-      margin-bottom: 6px;
+      margin-bottom: 8px;
     }
-
     .final-message {
       color: white;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       text-align: center;
-      opacity: 0.9;
+      opacity: 0.92;
       margin-top: 10px;
     }
-
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
-      font-size: 1.7rem;
-      padding: 10px 16px;
-      border-radius: 14px;
+      font-size: 1.6rem;
+      padding: 10px 18px;
+      border-radius: 16px;
       cursor: pointer;
       color: white;
       backdrop-filter: blur(6px);
-      margin-top: 6px;
+      margin-top: 8px;
     }
-
     #reiniciarBtn:hover {
       background: rgba(255,255,255,0.2);
     }
-
     .trigguiletras {
-      height: 24px;
+      height: 26px;
       opacity: 0.9;
       margin-top: 8px;
       transition: opacity 0.4s ease;
     }
-
     .hidden { display: none !important; }
   </style>
 </head>
