--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>Triggui – Nivel Dios</title>
+  <title>Triggui – Versión Fluida</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -11,11 +11,13 @@
       width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
-      background: #fdfdfd;
+      background: #fafafa;
       overflow: hidden;
     }
-    body.dark { background: #000; }
-
+    body.dark {
+      background: #000;
+      transition: background 0.5s ease;
+    }
     .main {
       height: 100dvh;
       display: flex;
@@ -28,7 +30,6 @@
       grid-template-rows: 1fr 1fr;
       gap: 2vw;
       padding: 2vw;
-      overflow-y: auto;
     }
     @media (orientation: landscape), (min-width: 768px) {
       .grid {
@@ -45,12 +46,12 @@
       font-weight: bold;
       font-size: 1.3rem;
       color: white;
-      position: relative;
-      overflow: hidden;
       background-size: cover;
       background-position: center;
+      position: relative;
+      overflow: hidden;
       cursor: pointer;
-      transition: transform 0.5s ease, box-shadow 0.5s ease;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
       animation: pulse 8s infinite;
     }
     .block:hover {
@@ -76,22 +77,21 @@
       animation: aparecer 0.7s forwards;
       box-shadow: 0 6px 20px rgba(0,0,0,0.4);
       background: rgba(255,255,255,0.15);
-      backdrop-filter: blur(8px);
+      backdrop-filter: blur(6px);
     }
-    .bg1 { background: linear-gradient(135deg, #ff416c, #ff4b2b); color: #ffffff; }
-    .bg2 { background: linear-gradient(135deg, #00c3ff, #ffff1c); color: #000000; }
-    .bg3 { background: linear-gradient(135deg, #fc466b, #3f5efb); color: #ffffff; }
-    .bg4 { background: linear-gradient(135deg, #8e2de2, #4a00e0); color: #ffffff; }
+    .bg1 { background: linear-gradient(135deg, #ff416c, #ff4b2b); color: #fff; }
+    .bg2 { background: linear-gradient(135deg, #00c3ff, #ffff1c); color: #000; }
+    .bg3 { background: linear-gradient(135deg, #fc466b, #3f5efb); color: #fff; }
+    .bg4 { background: linear-gradient(135deg, #8e2de2, #4a00e0); color: #fff; }
 
     .portada-img {
       width: 100%;
       height: 100%;
       object-fit: contain;
       border-radius: 20px;
-      box-shadow: 0 12px 50px rgba(0,0,0,0.6);
+      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
       animation: flotar 6s ease-in-out infinite;
     }
-
     @keyframes flotar {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
@@ -105,7 +105,6 @@
       50% { transform: scale(1.02); }
       100% { transform: scale(1); }
     }
-
     .footer {
       display: flex;
       flex-direction: column;
@@ -114,7 +113,6 @@
       min-height: 80px;
       justify-content: center;
     }
-
     .shock {
       background: linear-gradient(135deg, #ff6a00, #ffb347);
       color: white;
@@ -128,15 +126,13 @@
       animation: fadeIn 1.5s ease forwards;
       margin-bottom: 8px;
     }
-
     .final-message {
       color: white;
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       text-align: center;
-      opacity: 0.92;
-      margin-top: 10px;
+      opacity: 0.9;
+      margin-top: 8px;
     }
-
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
@@ -151,14 +147,12 @@
     #reiniciarBtn:hover {
       background: rgba(255,255,255,0.2);
     }
-
     .trigguiletras {
       height: 26px;
       opacity: 0.9;
       margin-top: 8px;
       transition: opacity 0.4s ease;
     }
-
     .hidden { display: none !important; }
   </style>
 </head>
@@ -229,7 +223,6 @@ function revelarTodo() {
     if (nombre === bloquePortada) {
       if (label) label.classList.add("hidden");
       if (text) text.remove();
-
       const img = document.createElement("img");
       img.src = portadaURL;
       img.alt = "Portada del libro";
@@ -237,7 +230,6 @@ function revelarTodo() {
       block.innerHTML = '';
       block.appendChild(img);
       block.style.background = "none";
-      block.style.padding = "0";
       block.style.borderRadius = "20px";
     } else {
       if (text) text.classList.remove("hidden");
