--- a/public/index.html
+++ b/public/index.html
@@ -2,63 +2,71 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>Triggui – Ritual Final</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+  <title>TrigguiApp</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
+
     html, body {
-      width: 100%;
-      min-height: 101vh;
+      height: 100%;
       font-family: 'Archivo', sans-serif;
-      background: white;
-      -webkit-overflow-scrolling: touch;
-      overflow-y: auto;
+      background: linear-gradient(135deg, #0d0e1a, #1e1f2a);
+      animation: bgFlow 20s infinite alternate;
+      color: white;
     }
-    body.dark { background: #000; }
+
+    @keyframes bgFlow {
+      0% { background: linear-gradient(135deg, #0d0e1a, #1e1f2a); }
+      50% { background: linear-gradient(135deg, #2c3e50, #4ca1af); }
+      100% { background: linear-gradient(135deg, #0d0e1a, #1e1f2a); }
+    }
+
+    body.dark {
+      background: #000;
+    }
 
     .main {
-      min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      height: 100vh;
     }
 
     .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      gap: 2vw;
-      padding: 2vw;
-      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 2vh;
+      padding: 2vh;
+      flex-grow: 1;
     }
 
-    @media (orientation: landscape), (min-width: 768px) {
+    @media (min-width: 768px) {
       .grid {
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1fr;
+        flex-direction: row;
       }
     }
 
     .block {
+      flex: 1;
+      min-height: 36vh;
+      border-radius: 16px;
+      font-weight: 600;
+      font-size: 1.1rem;
       display: flex;
       justify-content: center;
       align-items: center;
-      text-align: center;
-      border-radius: 16px;
-      font-weight: bold;
-      font-size: 1.2rem;
-      color: white;
       position: relative;
       overflow: hidden;
+      color: white;
+      cursor: pointer;
       background-size: cover;
       background-position: center;
-      cursor: pointer;
-      transition: transform 0.2s ease, opacity 0.3s ease;
+      transition: background 0.5s ease;
     }
 
-    .block:hover {
-      transform: scale(1.02);
+    .block.clear {
+      background: none !important;
     }
 
     .block-content {
@@ -71,238 +79,219 @@
       text-align: center;
     }
 
-    .label {
-      z-index: 1;
-    }
-
-    .accionable {
-      background: rgba(255,255,255,0.95);
+    .accionables {
+      background: rgba(255,255,255,0.93);
       color: #111;
       flex-direction: column;
       font-size: 1rem;
       font-weight: 500;
-      padding: 12px;
-      border-radius: 12px;
-      box-shadow: 0 12px 32px rgba(0,0,0,0.3);
+    }
+
+    .accionables span {
+      display: block;
+      margin: 6px 0;
       opacity: 0;
-      animation: aparecer 0.7s forwards;
+      transform: scale(0.9);
+      animation: burstIn 0.6s ease forwards;
+    }
+
+    @keyframes burstIn {
+      0% { opacity: 0; transform: scale(0.6) translateY(10px); filter: blur(2px); }
+      50% { opacity: 0.8; transform: scale(1.05) translateY(-4px); filter: blur(0); }
+      100% { opacity: 1; transform: scale(1) translateY(0); }
     }
 
     .portada-wrapper img {
-      width: 90%;
-      max-height: 90%;
+      max-height: 92%;
+      max-width: 92%;
       object-fit: contain;
-      border-radius: 12px;
-      animation: float 6s ease-in-out infinite;
+      border-radius: 14px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.3);
+      animation: floatBook 6s ease-in-out infinite;
     }
 
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-6px); }
-    }
-
-    @keyframes aparecer {
-      from { opacity: 0; transform: translateY(10px) scale(0.95); }
-      to { opacity: 1; transform: translateY(0) scale(1); }
+    @keyframes floatBook {
+      0%, 100% { transform: scale(1) translateY(0); }
+      50% { transform: scale(1.03) translateY(-6px); }
     }
 
     .footer {
-      padding: 1vh;
+      height: 18vh;
       display: flex;
       flex-direction: column;
+      justify-content: center;
       align-items: center;
       gap: 1vh;
+      padding: 1vh;
     }
 
     .shock {
-      background: linear-gradient(135deg, #ff6a00, #ffc400);
+      background: linear-gradient(to right, #FDC830, #F37335);
       color: white;
       font-weight: bold;
       border: none;
       border-radius: 28px;
-      padding: 12px 24px;
-      font-size: 1rem;
+      padding: 10px 22px;
+      font-size: 0.9rem;
       cursor: pointer;
-      box-shadow: 0 4px 16px rgba(255, 150, 0, 0.4);
-      animation: fadeIn 1.2s ease forwards;
+      box-shadow: 0 0 12px rgba(255, 200, 100, 0.6);
+      visibility: hidden;
+      opacity: 0;
+      transform: scale(0.9);
+      transition: all 0.5s ease;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
-    }
-
-    .trigguiletras {
-      height: 24px;
-      opacity: 0.9;
-    }
-
-    .final-message {
-      color: white;
-      font-size: 1rem;
-      margin-top: 10px;
-      text-align: center;
-      font-weight: 400;
-      opacity: 0.8;
-    }
-
-    #reiniciarBtn {
-      background: none;
-      border: none;
-      font-size: 1.8rem;
-      margin-top: 8px;
-      cursor: pointer;
-      color: white;
-      opacity: 0.5;
-      transition: opacity 0.3s ease;
-    }
-
-    #reiniciarBtn:hover {
+    .shock.visible {
+      visibility: visible;
       opacity: 1;
-    }
-
-    .pulse {
-      animation: pulse 2.5s infinite;
+      transform: scale(1);
+      animation: pulse 1.6s ease-in-out infinite;
     }
 
     @keyframes pulse {
-      0% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.015); opacity: 0.95; }
-      100% { transform: scale(1); opacity: 1; }
+      0%, 100% { transform: scale(1); box-shadow: 0 0 12px rgba(255, 200, 100, 0.6); }
+      50% { transform: scale(1.08); box-shadow: 0 0 16px rgba(255, 255, 140, 0.9); }
     }
 
-    .shake {
-      animation: shake 0.4s;
-    }
-
-    @keyframes shake {
-      0% { transform: translateX(0px); }
-      25% { transform: translateX(-3px); }
-      50% { transform: translateX(3px); }
-      75% { transform: translateX(-2px); }
-      100% { transform: translateX(0px); }
+    .trigguiletras {
+      height: 22px;
+      opacity: 0.9;
     }
 
     .hidden { display: none !important; }
   </style>
 </head>
 <body>
+
   <div class="main">
-    <div class="grid" id="gridContainer"></div>
+    <div class="grid">
+      <div class="block" id="detente" style="background: linear-gradient(135deg, #f2709c, #ff9472);">
+        <div class="block-content label" id="detenteLabel">Detente</div>
+        <div class="block-content accionables hidden" id="accionablesText"></div>
+      </div>
+
+      <div class="block" id="lee" style="background: linear-gradient(135deg, #00c9ff, #92fe9d);">
+        <div class="block-content label" id="leeLabel">Lee</div>
+        <div class="block-content portada-wrapper hidden" id="leeCover">
+          <img id="leeImg" src="" alt="portada del libro">
+        </div>
+      </div>
+    </div>
 
     <div class="footer">
-      <button class="shock hidden" id="shockBtn">📚👊 Chócalas por leer un libro físico</button>
-      <div class="final-message hidden" id="mensajeFinal">
-        El libro no te eligió. Tú ya estabas listo para encontrarlo.<br><br>
-        Ahora… busca un libro que tengas cerca. Ábrelo en cualquier página y lee una sola frase con absoluta presencia.
-      </div>
-      <button id="reiniciarBtn" class="hidden">🔄</button>
+      <button class="shock" id="shockBtn">📚👊 Chócalas por leer un libro físico</button>
       <img src="/trigguiletras.png" class="trigguiletras" />
     </div>
   </div>
 
-<script>
-const bloques = ["detente", "lee", "pregunta", "conecta"];
-const colores = [
-  "linear-gradient(135deg, #ff4e50, #f9d423)", // rojo a dorado
-  "linear-gradient(135deg, #43cea2, #185a9d)", // verde a azul oscuro
-  "linear-gradient(135deg, #ff6e7f, #bfe9ff)", // rosa a azul claro
-  "linear-gradient(135deg, #f7971e, #ffd200)"  // naranja vibrante
-];
+  <script>
+    const libros = [
+      {
+        portada: 'https://m.media-amazon.com/images/I/91bYsX41DVL.jpg',
+        accionables: ["🔁 Mejora 1% diario", "🧱 Crea sistemas, no metas", "🧠 Identidad guía el hábito"]
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/71QKQ9mwV7L.jpg',
+        accionables: ["🧘‍♂️ No todo importa", "💩 Ignora con intención", "🔥 Sé brutalmente honesto"]
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/81LdLpv8mJL.jpg',
+        accionables: ["💪 No te rindas antes de empezar", "🛡️ Expón tus miedos al rechazo", "💬 Pide lo imposible"]
+      }
+    ];
 
-const libros = [
-  {
-    portada: 'https://m.media-amazon.com/images/I/91bYsX41DVL.jpg',
-    frases: ["🔁 Mejora 1% diario", "🧱 Crea sistemas, no metas", "🧠 Identidad guía el hábito"]
-  },
-  {
-    portada: 'https://m.media-amazon.com/images/I/71QKQ9mwV7L.jpg',
-    frases: ["⏳ Solo el ahora existe", "🌟 Observa, no reacciones", "🧘 Encuentra tu ser"]
-  },
-  {
-    portada: 'https://m.media-amazon.com/images/I/81aY1lxkJ5L.jpg',
-    frases: ["🌿 Honra tus palabras", "🌀 No tomes nada personal", "🦅 Sé impecable contigo"]
-  },
-  {
-    portada: 'https://m.media-amazon.com/images/I/71XkT7vX3DL.jpg',
-    frases: ["🔓 Deja ir el control", "🌊 Fluye con la vida", "🌱 Libera la resistencia"]
-  }
-];
+    let libroActual = null;
+    let detenteOpen = false;
+    let leeOpen = false;
 
-let libroActual, bloquePortada, revelado = false;
-const mostrado = new Set();
+    const detente = document.getElementById('detente');
+    const accionablesText = document.getElementById('accionablesText');
+    const detenteLabel = document.getElementById('detenteLabel');
+    const lee = document.getElementById('lee');
+    const leeLabel = document.getElementById('leeLabel');
+    const leeCover = document.getElementById('leeCover');
+    const leeImg = document.getElementById('leeImg');
+    const shockBtn = document.getElementById('shockBtn');
 
-const el = id => document.getElementById(id);
+    function seleccionarNuevoLibro() {
+      libroActual = libros[Math.floor(Math.random() * libros.length)];
+    }
 
-function iniciarJuego() {
-  const grid = el('gridContainer');
-  grid.innerHTML = '';
-  libroActual = libros[Math.floor(Math.random() * libros.length)];
-  bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
-  revelado = false;
-  mostrado.clear();
+    function mostrarContenido() {
+      seleccionarNuevoLibro();
 
-  bloques.forEach((nombre, i) => {
-    const div = document.createElement('div');
-    div.className = 'block' + (nombre === bloquePortada ? ' pulse' : '');
-    div.id = nombre;
-    div.style.background = colores[i];
-    div.innerHTML = `
-      <div class="block-content label">${nombre.charAt(0).toUpperCase() + nombre.slice(1)}</div>
-      <div class="block-content accionable hidden" id="${nombre}Text"></div>
-    `;
-    div.onclick = () => manejarClick(nombre);
-    grid.appendChild(div);
-  });
-}
+      accionablesText.innerHTML = '';
+      libroActual.accionables.forEach((frase, i) => {
+        const span = document.createElement('span');
+        span.textContent = frase;
+        span.style.animationDelay = `${i * 0.3}s`;
+        accionablesText.appendChild(span);
+      });
 
-function manejarClick(nombre) {
-  if (revelado) {
-    location.reload(); // Reinicia si ya se reveló todo
-  } else if (nombre === bloquePortada) {
-    revelarTodo();
-  } else {
-    revelarSolo(nombre);
-  }
-}
+      leeImg.src = libroActual.portada;
 
-function revelarSolo(bloque) {
-  if (mostrado.has(bloque)) return;
-  mostrado.add(bloque);
-  const index = bloques.indexOf(bloque);
-  const frase = libroActual.frases[index % 3];
-  el(bloque + "Text").textContent = frase;
-  el(bloque + "Text").classList.remove("hidden");
-  el(bloque).querySelector(".label").classList.add("hidden");
-  el(bloque).classList.add("shake");
-  setTimeout(() => el(bloque).classList.remove("shake"), 400);
-}
+      accionablesText.classList.remove('hidden');
+      detenteLabel.classList.add('hidden');
+      leeCover.classList.remove('hidden');
+      leeLabel.classList.add('hidden');
 
-function revelarTodo() {
-  bloques.forEach((bloque, i) => {
-    const content = bloque === bloquePortada
-      ? `<img src="${libroActual.portada}" style="width:90%;border-radius:12px;">`
-      : libroActual.frases[i % 3];
-    el(bloque + "Text").innerHTML = content;
-    el(bloque + "Text").classList.remove("hidden");
-    el(bloque).querySelector(".label").classList.add("hidden");
-    el(bloque).classList.remove("pulse");
-  });
+      detente.classList.add('clear');
+      lee.classList.add('clear');
+      document.body.classList.add('dark');
 
-  document.body.classList.add("dark");
-  el("shockBtn").classList.remove("hidden");
-  revelado = true;
-}
+      detenteOpen = true;
+      leeOpen = true;
 
-el("shockBtn").onclick = () => {
-  el("shockBtn").classList.add("hidden");
-  el("mensajeFinal").classList.remove("hidden");
-  el("reiniciarBtn").classList.remove("hidden");
-};
+      setTimeout(() => {
+        if (detenteOpen && leeOpen) {
+          shockBtn.classList.add('visible');
+        }
+      }, 3000);
+    }
 
-el("reiniciarBtn").onclick = () => location.reload();
+    function ocultarDetente() {
+      accionablesText.classList.add('hidden');
+      detenteLabel.classList.remove('hidden');
+      detente.classList.remove('clear');
+      detenteOpen = false;
+      verificarCerrarFondo();
+    }
 
-iniciarJuego();
-</script>
+    function ocultarLee() {
+      leeCover.classList.add('hidden');
+      leeLabel.classList.remove('hidden');
+      lee.classList.remove('clear');
+      leeOpen = false;
+      verificarCerrarFondo();
+    }
+
+    function verificarCerrarFondo() {
+      if (!detenteOpen && !leeOpen) {
+        document.body.classList.remove('dark');
+        shockBtn.classList.remove('visible');
+      }
+    }
+
+    detente.addEventListener('click', () => {
+      if (!detenteOpen || !leeOpen) {
+        mostrarContenido();
+      } else {
+        ocultarDetente();
+      }
+    });
+
+    lee.addEventListener('click', () => {
+      if (!leeOpen || !detenteOpen) {
+        mostrarContenido();
+      } else {
+        ocultarLee();
+      }
+    });
+
+    shockBtn.addEventListener('click', () => {
+      shockBtn.innerText = '📚✨ ¡Gracias por abrir un libro real!';
+      shockBtn.disabled = true;
+    });
+  </script>
 </body>
 </html>
